<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/gradient_background">


    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:tint="@color/white"
            android:layout_alignParentBottom="true"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/startView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/topbar"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/voiceBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/corner_with_border"
            android:text="@string/by_voice_button"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/manuallyBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/voiceBtn"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/corner_with_border"
            android:text="@string/by_manually_button"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/settingBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/manuallyBtn"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/corner_with_border"
            android:text="@string/settings_button"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

</RelativeLayout>