<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="14dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/startView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/topbar"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/startBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/corner_with_border"
            android:text="@string/main_start"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/infoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/startView">

        <TextView
            android:id="@+id/firstInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            android:layout_centerHorizontal="true"
            android:text="5 + 2 = 7, \n9 * 10 = 90"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:gravity="start" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/guideView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/infoView"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/guideBtn"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/corner_with_border"
            android:text="@string/guid_btn"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/white"/>
    </RelativeLayout>

</RelativeLayout>